--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 		</nav>
 		<main class="root wrap">
 			<!-- menu content goes here -->
+			 <h1>Pizza Time</h1>
 		</main>
         <script src="./ts/index.ts" type="module"></script>
 	</body>
